--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "octokit": "^2.0.14"
+  },
+  "scripts": {
+    "start": "nodemon ./src/index.js",
+    "build": "nodemon ./src/index.js"
   }
 }
