--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   node-express-docker:
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=dev
     build: 
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
