--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
   node-express-docker:
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     volumes:
       - ./:/usr/app
     container_name: node-express-docker
