--- a/ecs-2.yml
+++ b/ecs-2.yml
@@ -140,7 +140,7 @@ Resources:
     Type: AWS::ECS::Service
     Properties:
       # rename after first deploy
-      ServiceName: aws-ecs-jeremiahgage-service
+      ServiceName: aws-ecs-jeremiahgage-sv
       Cluster: !Ref Cluster
       TaskDefinition: !Ref TaskDefinition
       DesiredCount: 1
