--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,7 +54,7 @@ jobs:
         touch .env
         echo GITHUB_SITE_AUTH=${{ secrets.API_GITHUB_SITE_AUTH }} >> .env
         echo GOOGLE_RECAPTCHA_SECRET_KEY=${{ secrets.GOOGLE_RECAPTCHA_SECRET_KEY }} >> .env
-        echo NODE_ENV=${{ repo.NODE_ENV }} >> .env
+        echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
         cat .env
 
     - name: Checkout
