--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,12 +32,12 @@ on:
 
 env:
   AWS_REGION: us-east-2                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: jeremiahgage_api_repo           # set this to your Amazon ECR repository name
-  ECS_SERVICE: jeremiahgage_api_service                # set this to your Amazon ECS service name
-  ECS_CLUSTER: jeremiahgage_api_cluster                 # set this to your Amazon ECS cluster name
+  ECR_REPOSITORY: firegate_api_repo           # set this to your Amazon ECR repository name
+  ECS_SERVICE: firegate_api_service                # set this to your Amazon ECS service name
+  ECS_CLUSTER: firegate_api_cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ./aws.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: jeremiahgage_api_deploy           # set this to the name of the container in the
+  CONTAINER_NAME: firegate_api_deploy           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
@@ -75,8 +75,8 @@ jobs:
       id: build-image
       env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: aws-ecs-jeremiahgage-api
-          IMAGE_TAG: aws-ecs-jeremiahgage-api-${{ github.sha }}
+          ECR_REPOSITORY: aws-ecs-firegate-api
+          IMAGE_TAG: aws-ecs-firegate-api-${{ github.sha }}
       run: |
         # Build a docker container and
         # push it to ECR so that it can
@@ -89,21 +89,21 @@ jobs:
       id: push-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: aws-ecs-jeremiahgage-api
-        IMAGE_TAG: aws-ecs-jeremiahgage-api-${{ github.sha }}
+        ECR_REPOSITORY: aws-ecs-firegate-api
+        IMAGE_TAG: aws-ecs-firegate-api-${{ github.sha }}
       run: |
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
     - name: Download task definition
-      run: aws ecs describe-task-definition --task-definition aws-ecs-jeremiahgage-task --query taskDefinition > task-definition.json
+      run: aws ecs describe-task-definition --task-definition aws-ecs-firegate-task --query taskDefinition > task-definition.json
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: update-task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: aws-ecs-jeremiahgage-container
+        container-name: aws-ecs-firegate-container
         image: ${{ steps.push-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
@@ -111,5 +111,5 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.update-task-def.outputs.task-definition }}
-        service: aws-ecs-jeremiahgage-service-main
-        cluster: aws-ecs-jeremiahgage-api
+        service: aws-ecs-firegate-service-main
+        cluster: aws-ecs-firegate-api
