--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ ASSOCIATION_FOR_COMPUTING_MACHINERY_URL="https://www.acm.org/"
 COLLEGE_OF_THE_OZARKS_URL="https://www.cofo.edu/"
 SIGMA_ZETA_URL="https://sigmazeta.org/"
 
-aws cloudformation create-stack --stack-name aws-ecs-firegate-api --template-body file://./ecs-1.yml --capabilities CAPABILITY_NAMED_IAM \
+aws cloudformation create-stack --stack-name aws-ecs-jeremiahgage-api --template-body file://./ecs-1.yml --capabilities CAPABILITY_NAMED_IAM \
 --parameters ParameterKey=VPCID,ParameterValue=vpc-0d56b832e6a76622d \
 ParameterKey=Subnet1ID,ParameterValue=subnet-0e15ad0a9270cef3b \
 ParameterKey=Subnet2ID,ParameterValue=subnet-024c98a29353d792f \
-ParameterKey=DomainName,ParameterValue=firegate.me
+ParameterKey=DomainName,ParameterValue=jeremiahgage.me
 
-aws cloudformation update-stack --stack-name aws-ecs-firegate-api --template-body file://./ecs-2.yml --capabilities CAPABILITY_NAMED_IAM \
+aws cloudformation update-stack --stack-name aws-ecs-jeremiahgage-api --template-body file://./ecs-2.yml --capabilities CAPABILITY_NAMED_IAM \
 --parameters ParameterKey=VPCID,ParameterValue=YOUR_VPC_ID \
 ParameterKey=Subnet1ID,ParameterValue=YOUR_SUBNET_1_ID \
 ParameterKey=Subnet2ID,ParameterValue=YOUR_SUBNET_2_ID \
-ParameterKey=DomainName,ParameterValue=firegate.me
+ParameterKey=DomainName,ParameterValue=jeremiahgage.me
