--- a/ecs-1.yml
+++ b/ecs-1.yml
@@ -20,15 +20,15 @@ Resources:
   Cluster:
     Type: AWS::ECS::Cluster
     Properties:
-      ClusterName: aws-ecs-firegate-api
+      ClusterName: aws-ecs-jeremiahgage-api
   LogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
-      LogGroupName: aws-ecs-firegate-api-group
+      LogGroupName: aws-ecs-jeremiahgage-api-group
   ExecutionRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: aws-ecs-firegate-api-role
+      RoleName: aws-ecs-jeremiahgage-api-role
       AssumeRolePolicyDocument:
         Statement:
           - Effect: Allow
@@ -67,14 +67,14 @@ Resources:
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
-      Family: aws-ecs-firegate-task
+      Family: aws-ecs-jeremiahgage-task
       Cpu: 256
       Memory: 512
       NetworkMode: awsvpc
       ExecutionRoleArn: !Ref ExecutionRole
       TaskRoleArn: !Ref TaskRole
       ContainerDefinitions:
-        - Name: aws-ecs-firegate-container
+        - Name: aws-ecs-jeremiahgage-container
           Image: nginx:1.17.7
           PortMappings:
             - ContainerPort: 80
@@ -89,7 +89,7 @@ Resources:
   Service:
     Type: AWS::ECS::Service
     Properties:
-      ServiceName: aws-ecs-firegate-svc
+      ServiceName: aws-ecs-jeremiahgage-svc
       Cluster: !Ref Cluster
       TaskDefinition: !Ref TaskDefinition
       DesiredCount: 1
@@ -119,14 +119,14 @@ Resources:
   LoadBalancer:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
-      Name: aws-ecs-firegate-api-alb
+      Name: aws-ecs-jeremiahgage-api-alb
       Subnets:
         - !Ref Subnet1ID
         - !Ref Subnet2ID
       SecurityGroups:
         - !GetAtt LoadBalancerSecurityGroup.GroupId
 
-# aws cloudformation create-stack --stack-name aws-ecs-typescript-api --template-body file://./ecs-1.yml --capabilities CAPABILITY_NAMED_IAM \
+# aws cloudformation create-stack --stack-name aws-ecs-jeremiahgage-api --template-body file://./ecs-1.yml --capabilities CAPABILITY_NAMED_IAM \
 # --parameters ParameterKey=VPCID,ParameterValue=YOUR_VPC_ID \
 # ParameterKey=Subnet1ID,ParameterValue=YOUR_SUBNET_1_ID \
 # ParameterKey=Subnet2ID,ParameterValue=YOUR_SUBNET_2_ID \
