--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM node:lts-alpine
 ENV ENV=production
-WORKDIR /usr/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm install cors dotenv axios express 
 RUN npm install pm2 -g
