--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,7 +2,5 @@ FROM node:lts-alpine
 ENV ENV=production
 WORKDIR /app
 COPY package*.json ./
-RUN npm install cors dotenv axios express 
-RUN npm install pm2 -g
-RUN npm install -g nodemon
+RUN npm install
 COPY . .
