--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,14 +37,14 @@ on:
     branches: [ "master" ]
 
 env:
-  AWS_REGION: us-east-2                  # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: jeremiahgage         # set this to your Amazon ECR repository name
-  ECS_SERVICE: api-jeremiahgage-balanced-sg-service                # set this to your Amazon ECS service name
-  ECS_CLUSTER: jeremiahgage                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .github/workflows/task-definition.json      # set this to the path to your Amazon ECS task definition                                           # file, e.g. .aws/task-definition.json
-  
-  CONTAINER_NAME: api-jeremiahgage-deploy           # set this to the name of the container in the
-                                               # containerDefinitions section of your task definition
+  AWS_REGION: us-east-2                                             # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: jeremiahgage                                      # set this to your Amazon ECR repository name
+  ECS_SERVICE: api-jeremiahgage-balanced-sg-service                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: jeremiahgage                                         # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: .github/workflows/task-definition.json       # set this to the path to your Amazon ECS task definition                                           
+                                                                    # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: api-jeremiahgage-deploy                           # set this to the name of the container in the
+                                                                    # containerDefinitions section of your task definition
 
 permissions:
   contents: read
