--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ ASSOCIATION_FOR_COMPUTING_MACHINERY_URL="https://www.acm.org/"
 COLLEGE_OF_THE_OZARKS_URL="https://www.cofo.edu/"
 SIGMA_ZETA_URL="https://sigmazeta.org/"
 
-VERSION_NUMBER="v1.0.1"
+VERSION_NUMBER=v1.0.1
