--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
         echo NODE_VERSION="production" >> .env
         echo SECRETS_POPULATED=${{ secrets.SECRETS_POPULATED }} >> .env
         echo GOOGLE_RECAPTCHA_SECRET_KEY=${{ secrets.GOOGLE_RECAPTCHA_SECRET_KEY }} >> .env
+        echo API_GITHUB_SITE_AUTH=${{ secrets.API_GITHUB_SITE_AUTH }} >> .env
         cat .env
         
     - name: Configure AWS credentials
